// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search-index export command filterIndicesById should throw an error for ids which do not exist in the list of indices 1`] = `
"The following ID(s) could not be found: ['index-id-4'].
Nothing was exported, exiting."
`;

exports[`search-index export command getExports should return a list of indices to export and a list of filenames that will be updated 1`] = `
Array [
  Array [
    Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-1",
        },
      ],
      "label": "index 1",
      "name": "index-name-1",
    },
    "export-dir",
    Object {
      "export-dir/export-filename-1.json": Object {
        "assignedContentTypes": Array [
          Object {
            "id": "assigned-type-1",
          },
        ],
        "label": "index 1",
        "name": "index-name-1",
      },
      "export-dir/export-filename-2.json": Object {
        "assignedContentTypes": Array [
          Object {
            "id": "assigned-type-2",
          },
        ],
        "label": "index 2",
        "name": "index-name-2",
      },
    },
  ],
  Array [
    Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-2",
        },
      ],
      "label": "index 2",
      "name": "index-name-2",
    },
    "export-dir",
    Object {
      "export-dir/export-filename-1.json": Object {
        "assignedContentTypes": Array [
          Object {
            "id": "assigned-type-1",
          },
        ],
        "label": "index 1",
        "name": "index-name-1",
      },
      "export-dir/export-filename-2.json": Object {
        "assignedContentTypes": Array [
          Object {
            "id": "assigned-type-2",
          },
        ],
        "label": "index 2",
        "name": "index-name-2",
      },
    },
  ],
]
`;

exports[`search-index export command getExports should return a list of indices to export and a list of filenames that will be updated 2`] = `
Array [
  Object {
    "filename": "export-dir/export-filename-1.json",
    "index": Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-1",
        },
      ],
      "label": "index 1",
      "name": "index-name-1",
    },
    "status": "CREATED",
  },
  Object {
    "filename": "export-dir/export-filename-2.json",
    "index": Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-2",
        },
      ],
      "label": "index 2",
      "name": "index-name-2",
    },
    "status": "UPDATED",
  },
]
`;

exports[`search-index export command getExports should return a list of indices to export and a list of filenames that will be updated 3`] = `
Array [
  Object {
    "filename": "export-dir/export-filename-2.json",
    "uri": "index-name-2",
  },
]
`;

exports[`search-index export command getExports should return a list of indices to export and no filenames that will be updated (first export) 1`] = `
Array [
  Array [
    Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-1",
        },
      ],
      "label": "index 1",
      "name": "index-name-1",
    },
    "export-dir",
    Object {},
  ],
  Array [
    Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-2",
        },
      ],
      "label": "index 2",
      "name": "index-name-2",
    },
    "export-dir",
    Object {},
  ],
]
`;

exports[`search-index export command getExports should return a list of indices to export and no filenames that will be updated (first export) 2`] = `
Array [
  Object {
    "filename": "export-dir/export-filename-1.json",
    "index": Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-1",
        },
      ],
      "label": "index 1",
      "name": "index-name-1",
    },
    "status": "CREATED",
  },
  Object {
    "filename": "export-dir/export-filename-2.json",
    "index": Object {
      "assignedContentTypes": Array [
        Object {
          "id": "assigned-type-2",
        },
      ],
      "label": "index 2",
      "name": "index-name-2",
    },
    "status": "CREATED",
  },
]
`;

exports[`search-index export command processIndices should output a message if no indices to export from hub 1`] = `
Array [
  Array [
    "No search indices to export from this hub, exiting.
",
  ],
]
`;
